--- a/Landing page/consultas2.css
+++ b/Landing page/consultas2.css
@@ -30,7 +30,7 @@ h1{
 
 .container{
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.3);
+   <!-- background-color: rgba(0, 0, 0, 0.3); -->
     align-items: center;
     text-align: left;
     margin: 20px;
